change file extension

--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>React App</title>
+        <title>Keeper App</title>
+        <link rel="stylesheet"
+         href="https://fonts.googleapis.com/css?family=McLaren|Montserrat&display=swap">
     </head>
     <body>
         <div id="root"></div>
-        <script src="./src/index.js" type="text/jsx"></script>
+        <script src="/src/index.js" type="text/jsx"></script>
     </body>
 </html>
